# dbx_template_agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GLOSSARY.md  Makefile  README.md  TROUBLESHOOTING.md  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml  secret-scan.yml  validate.yml
evals/: eval_set.jsonl  run_agent_eval.py  thresholds.yaml
notebooks/: 01_setup_and_first_trace.py  02_build_the_agent.py  03_experiments.py  04_design_your_evals.py  05_traces_to_better_evals.py  06_gate_and_deploy.py  07_monitor_cost_and_quality.py  08_agent_bricks_challenger.py
resources/: dbx_template_agent_agent_serving.yml  dbx_template_agent_eval_job.yml
scripts/: setup_github_oidc.sh
src/dbx_template_agent/: __init__.py  agent.py  config.py  cost.py  scorers.py  tools.py
tests/: conftest.py  test_agent.py  test_cost.py  test_scorers.py
